RESOLVED FIXED224571
Promote `-[WKWebView _themeColor]` SPI to API
https://bugs.webkit.org/show_bug.cgi?id=224571
Summary Promote `-[WKWebView _themeColor]` SPI to API
Devin Rousso
Reported 2021-04-14 12:40:23 PDT
.
Attachments
Patch (13.46 KB, patch)
2021-04-14 12:50 PDT, Devin Rousso
no flags
Patch (13.91 KB, patch)
2021-04-14 14:15 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2021-04-14 12:40:39 PDT
Devin Rousso
Comment 2 2021-04-14 12:50:35 PDT
Geoffrey Garen
Comment 3 2021-04-14 12:56:19 PDT
Comment on attachment 426036 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=426036&action=review > Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:-2985 > -- (CocoaColor *)_themeColor Don't we still need to keep around the _themeColor variant, to avoid breaking existing binaries that use it? Two separate but similar concerns here: (1) We don't want anything that uses _themeColor to break at the moment this lands in a build; (2) We may want to A/B test new WebKit with old { Insert App Here } when doing perf or correctness bisecting.
Devin Rousso
Comment 4 2021-04-14 14:15:57 PDT
Geoffrey Garen
Comment 5 2021-04-14 14:22:05 PDT
Comment on attachment 426045 [details] Patch r=me
EWS
Comment 6 2021-04-14 18:26:29 PDT
Committed r275984 (236536@main): <https://commits.webkit.org/236536@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426045 [details].
Note You need to log in before you can comment on or make changes to this bug.