Promote `-[WKWebView _themeColor]` SPI to API https://bugs.webkit.org/show_bug.cgi?id=224571 <rdar://problem/75231602>

Reviewed by Geoffrey Garen.

Source/WebKit:

* UIProcess/API/Cocoa/WKWebView.h:
* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView themeColor]): Added.
(-[WKWebView _themeColor]):
* UIProcess/API/Cocoa/WKWebViewPrivate.h:
* UIProcess/Cocoa/PageClientImplCocoa.mm:
(WebKit::PageClientImplCocoa::themeColorWillChange):
(WebKit::PageClientImplCocoa::themeColorDidChange):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/HTMLMetaThemeColor.mm:
(TEST.HTMLMetaThemeColor.OnLoad):
(TEST.HTMLMetaThemeColor.MultipleTags):
(-[WKWebViewThemeColorObserver initWithWebView:]):
(TEST.HTMLMetaThemeColor.KVO):
(TEST.HTMLMetaThemeColor.ExperimentalUseThemeColorForScrollAreaBackgroundColor):


Canonical link: https://commits.webkit.org/236536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275984 268f45cc-cd09-0410-ab3c-d52691b4dbfc